@`./build.sh`: `java --source susuwu/FishSim.java`
Is followup to: commit HEAD~3 (@`./susuwu/FishSim.java`: Simple *Java* fish sim). TODO: `squash` this?
@`./build.sh`: simple build script for `./susuwu/FishSim.java`, which allows unit tests through *GitHub Workflows*
	+`APTITUDE="apt"` Purpose: simple to set whole script to use alternative installer-executables.
	+`PATH_TO_CLASS`: is not prefixed with `./`, since thus gives "Error: could not find or load main class ..FishSim". This prefix is used so that local paths are not confused with URLs (which both use `<name>.<extension>`).
	+`JAVA_MODULES`: to deduplicate paths, stores modules which `java*` reuses.
	+`JAVA_FLAGS`: to deduplicate options, stores options which `java` reuses.
		@`JAVA_FLAGS`: +`-enableassertions` is now included, so `assert` in source code is used. Simple to disable (just comment the row) so performance improves.
	+`JAVA_BUILD_TEST_FLAGS="-verbose"`: to deduplicate options, stores options which unit test build reuses.
		use `+="--source 16"` for "error: an enum switch case label must be the unqualified name of an enumeration constant" solution (notice: gives "error: invalid source release: 16" on GitHub workflows).
	+`JAVA_TEST_FLAGS="-verbose:module"`: to deduplicate options, stores options which unit test execution reuses.

@`./posts/FishSim.md#intro`: references `./susuwu/build.sh`
+`./susuwu/build.sh`: fixes "Error: Could not find or load main class Java.FishSim" for compiled execution.
	TODO: Research reasons which `java` gives such error messages (for execution from subdirs unless `java --source` is used).